; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_sd.c_cms_set1_SignerIdentifier.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_sd.c_cms_set1_SignerIdentifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@CMS_F_CMS_SET1_SIGNERIDENTIFIER = common dso_local global i32 0, align 4
@CMS_R_UNKNOWN_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cms_set1_SignerIdentifier(%struct.TYPE_5__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %27 [
    i32 129, label %9
    i32 128, label %18
  ]

9:                                                ; preds = %3
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @cms_set1_ias(i32* %12, i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %9
  store i32 0, i32* %4, align 4
  br label %35

17:                                               ; preds = %9
  br label %31

18:                                               ; preds = %3
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @cms_set1_keyid(i32* %21, i32* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %18
  store i32 0, i32* %4, align 4
  br label %35

26:                                               ; preds = %18
  br label %31

27:                                               ; preds = %3
  %28 = load i32, i32* @CMS_F_CMS_SET1_SIGNERIDENTIFIER, align 4
  %29 = load i32, i32* @CMS_R_UNKNOWN_ID, align 4
  %30 = call i32 @CMSerr(i32 %28, i32 %29)
  store i32 0, i32* %4, align 4
  br label %35

31:                                               ; preds = %26, %17
  %32 = load i32, i32* %7, align 4
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  store i32 1, i32* %4, align 4
  br label %35

35:                                               ; preds = %31, %27, %25, %16
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @cms_set1_ias(i32*, i32*) #1

declare dso_local i32 @cms_set1_keyid(i32*, i32*) #1

declare dso_local i32 @CMSerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
